--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -1,22 +1,30 @@
 .main-container {
   display: flex;
   align-items: center;
-  justify-content: center;
   height: 100vh;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .sign-in-container {
-  border: 3px solid black;
+  border: 2.3px solid lightgray;
+  border-radius: 5px;
   width: 30%;
-  height: 60%;
+  height: 65%;
   justify-content: center;
   margin: 0 auto;
+  box-shadow: 5px 5px lightgray;
+  text-align: center;
+}
+
+.site-logo img {
+  width: 100%;
+  height: 100%;
 }
 
 .site-logo {
-  height: 100px;
-  width: 100px;
-  margin: auto;
+  height: 35%;
+  width: 90%;
+  margin: 10px auto;
 }
 
 .sign-in-form {
@@ -24,5 +32,28 @@
   flex-direction: column;
   text-align: center;
   align-items: center;
-  width: 60%;
+  justify-content: center;
+  height: 54%;
+}
+
+.sign-in-form input {
+  width: 80%;
+  margin: 5px 0;
+  padding: 10px 0;
+}
+.sign-in-form label {
+  font-size: 20px;
+}
+
+.log-in {
+  margin-top: 20px;
+  width: 50%;
+  height: 40px;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 1px 1px grey;
+}
+
+.log-in:active {
+  transform: scale(0.97);
 }
