admin dashboard setup

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,6 +9,10 @@
     {{#each css}}
     <link rel="stylesheet" href="./css/{{this}}.css">
     {{/each}}
+    {{#each scripts}}
+    <script src="./scripts/{{this}}.js"></script>
+    {{/each}}
+
 </head>
 {{!-- Venkat - On loading, we will have a log in page.
   The page will look similar to the Ironhack login (Just a center aligned log in form).
