--- a/public/css/adminHome.css
+++ b/public/css/adminHome.css
@@ -48,3 +48,46 @@
         opacity: 1;
     }
 }
+
+
+.manage-items-wrapper {
+    padding: 2rem 1.2rem;
+    height: calc(100vh - (84px));
+    flex-direction: column;
+
+}
+
+.item-manage-table {
+    border: 1px solid;
+    width: 80%
+}
+
+.table-row {
+    display: flex;
+}
+
+.table-division {
+    border: 1px solid;
+    padding: 1rem;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    width: 25%;
+}
+
+.table-head {
+    width: 25%;
+    border: 1px solid;
+    padding: 1rem;
+    text-align: left;
+    font-weight: 600;
+}
+
+.table-icon:hover {
+    cursor: pointer;
+    color: rgb(52, 52, 255);
+}
+
+.table-image {
+    width: 30px;
+}
