planner-dashboard first page frontend complete

--- a/views/partials/dashboard-row-planner.hbs
+++ b/views/partials/dashboard-row-planner.hbs
@@ -1,1 +1,33 @@
-Hello World
+<td class="table-division">
+    <div>{{this.tripID}}</div>
+</td>
+<td class="table-division">
+    <div>{{this.oifID}}</div>
+</td>
+<td class="table-division">
+    <div>{{this.college}}</div>
+</td>
+<td class="table-division">
+    <div>{{this.tripDates}}</div>
+</td>
+<td class="table-division">
+    <div>{{this.numberOfBatches}}</div>
+</td>
+<td class="table-division">
+    <div>{{this.trainers}}</div>
+</td>
+<td class="table-division">
+    <div>{{this.sessionInfo}}</div>
+</td>
+<td class="table-division">
+    <div>Status</div>
+</td>
+<td class="table-division">
+    <a href="" class="fa fa-edit table-icon"></a>
+</td>
+<td class="table-division">
+    <a href="" class="fa fa-trash table-icon"></a>
+</td>
+<td class="table-division">
+    <a href="" class="fa fa-clipboard-list table-icon">Plan</a>
+</td>
