plan schedule structure done

--- a/views/partials/dashboard-row-planner.hbs
+++ b/views/partials/dashboard-row-planner.hbs
@@ -29,5 +29,5 @@
     <a href="" class="fa fa-trash table-icon"></a>
 </td>
 <td class="table-division">
-    <a href="" class="fa fa-clipboard-list table-icon">Plan</a>
+    <a href="/planthetrip/{{this._id}}" class="fa fa-clipboard-list table-icon">Plan</a>
 </td>
