--- a/views/userHome.hbs
+++ b/views/userHome.hbs
@@ -1,3 +1,13 @@
-<h1>
-    Welcome to your user Home Page
-</h1>
+{{> navbar}}
+
+<div class="main-container">
+    <div class="user-events">
+        <h2 class="assignment-title">Upcoming Assignments</h2>
+        <div>
+
+        </div>
+        <h2 class="assignment-title">Current Assignment</h2>
+        <h2 class="assignment-title">Previous Assignments</h2>
+    </div>
+    <div class="user-event-more"></div>
+</div>
