working on user profile

--- a/views/edit-profile.hbs
+++ b/views/edit-profile.hbs
@@ -8,7 +8,7 @@
         <h1>
             Update your profile
         </h1>
-        <p> Please update your details so that they are upto date </p>
+        <p> Please provide your current details</p>
     </section>
     <section class="signup-section">
         <form action="/edit-profile" method="POST" class="signup-form">
