--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TraveLog</title>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     {{#each css}}
     <link rel="stylesheet" href="/css/{{this}}.css">
     {{/each}}
