--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,16 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TraveLog</title>
-<<<<<<< HEAD
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-=======
-    <link rel="stylesheet" href="./css/reset.css">
->>>>>>> b0a03da68da65fd78ff127efa2bf2c1eefc039cb
     {{#each css}}
-    <link rel="stylesheet" href="/css/{{this}}.css">
+    <link rel="stylesheet" href="css/{{this}}.css">
     {{/each}}
     {{#each scripts}}
-    <script src="/scripts/{{this}}.js"></script>
+    <script src="scripts/{{this}}.js"></script>
     {{/each}}
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
