--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,10 +8,10 @@
     <title>TraveLog</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     {{#each css}}
-    <link rel="stylesheet" href="css/{{this}}.css">
+    <link rel="stylesheet" href="/css/{{this}}.css">
     {{/each}}
     {{#each scripts}}
-    <script src="scripts/{{this}}.js"></script>
+    <script src="/scripts/{{this}}.js"></script>
     {{/each}}
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
