--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,8 +10,9 @@
     {{#each css}}
     <link rel="stylesheet" href="/css/{{this}}.css">
     {{/each}}
+    <link rel="stylesheet" href="/css/reset.css">
     {{#each scripts}}
-    <script src="/scripts/{{this}}.js"></script>
+    <script type="module" src="/scripts/{{this}}.js"></script>
     {{/each}}
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
