--- a/views/planSchedule.hbs
+++ b/views/planSchedule.hbs
@@ -1,9 +1,12 @@
+{{> navbar}}
+
+
 <span>Finished Planning?</span> <label class="switch">
     <input id="plan-status" type="checkbox">
     <span class="slider round"></span>
 </label>
 <br>
-<button>Save Plan</button>
+<br>
 <br>
 
 
