--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -22,6 +22,7 @@
             <input type="text" name="contactNumber" id="contactNumber" placeholder="+33 (0) 65 90 15 23" required>
             <label for="password">Password</label>
             <input type="password" name="password" id="password" placeholder="******" required>
+            {{sessionFlash}}
             <button>Create Profile</button>
         </form>
         <span>Already have an account? <a href="/">Please Sign In</a></span>
