--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -13,7 +13,7 @@
             <input type="text" name="name" id="name" placeholder="Andrew Brown" required>
             <label for="profilePicture">Profile Picture</label>
             <input type="text" name="profilePicture" id="profilePicture" placeholder="Img URL"
-                value="https://res.cloudinary.com/dsj26eqz4/image/upload/v1574017108/travellog_cctkdp.png" required>
+                value="https://res.cloudinary.com/dsj26eqz4/image/upload/v1574017108/travellog_cctkdp.png">
             <label for="employeeID">Employee ID</label>
             <input type="text" name="employeeID" id="employeeID" placeholder="TLR44050" required>
             <label for="email">Email Address</label>
