--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,7 @@
     <title>TraveLog</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.25/webcam.min.js"></script>
     {{#each css}}
     <link rel="stylesheet" href="/css/{{this}}.css">
     {{/each}}
