--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -1,8 +1,7 @@
 <div class="main-container">
     <section class="sign-in-container">
         <div class="site-logo">
-            <img src="https://res.cloudinary.com/dsj26eqz4/image/upload/v1574017108/travellog_cctkdp.png"
-                alt="site-logo">
+            <h1>Trave<span>Log</span></h1>
         </div>
         <form action="/" method="post" class="sign-in-form">
             <label for="email">Email Address</label>
