--- a/public/css/nav-bar.css
+++ b/public/css/nav-bar.css
@@ -1,30 +1,28 @@
 .nav-bar {
   width: 100%;
   padding: 10px;
-  background-color: grey;
   display: flex;
   align-items: center;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   height: 80px;
+  border-bottom: 1.5px solid grey;
 }
 
 .nav-bar a {
   text-decoration: none;
-  color: white;
+  color: #f05136;
   font-size: 25px;
 }
 
-.nav-bar a:active {
-  color: #f05136;
+.nav-bar a:hover {
+  transform: scale(1.1);
 }
 .nav-bar img {
   height: 65px;
   width: 65px;
   margin-right: 30px;
   border-radius: 35px;
-  border: 2px solid white;
-  /* transform: rotate(180deg); */
-  /* The transform above will be removed, just for testing as picture displays upside down */
+  border: 2px solid #f05136;
 }
 .edit-nav {
   width: 90%;
