--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -3,17 +3,18 @@
   align-items: center;
   height: 100vh;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
 }
 
 .sign-in-container {
-  border: 2.3px solid lightgray;
+  border: 1.5px solid #f05136;
   border-radius: 5px;
   width: 30%;
   height: 65%;
   justify-content: center;
   margin: 0 auto;
-  box-shadow: 5px 5px lightgray;
   text-align: center;
+  background-color: white;
 }
 
 .site-logo img {
@@ -25,6 +26,13 @@
   height: 35%;
   width: 90%;
   margin: 10px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 80px;
+}
+.site-logo span {
+  color: #f05136;
 }
 
 .sign-in-form {
@@ -51,7 +59,9 @@
   height: 40px;
   border-radius: 5px;
   border: none;
-  box-shadow: 1px 1px grey;
+  background-color: #f05136;
+  color: white;
+  /* box-shadow: 1px 1px grey; */
 }
 
 .log-in:active {
