--- a/views/partials/dashboard-row-college.hbs
+++ b/views/partials/dashboard-row-college.hbs
@@ -20,5 +20,5 @@
     <a href="" class="fa fa-edit table-icon"></a>
 </td>
 <td class="table-division">
-    <a href="" class="fa fa-trash table-icon"></a>
+    <a href="" id="{{this._id}}" class="fa fa-trash table-icon collegeDeleteButton"></a>
 </td>
