--- a/views/partials/dashboard-row-user.hbs
+++ b/views/partials/dashboard-row-user.hbs
@@ -16,8 +16,8 @@
     {{/each}}
 </td>
 <td class="table-division">
-    <a href="" class="fa fa-edit table-icon"></a>
+    <a href="/edit-user/{{this._id}}" class="fa fa-edit table-icon"></a>
 </td>
 <td class="table-division">
-    <a href="" class="fa fa-trash table-icon"></a>
+    <a href="" id = "{{this._id}}" class="fa fa-trash table-icon userDeleteButton"></a>
 </td>
