--- a/public/css/nav-bar.css
+++ b/public/css/nav-bar.css
@@ -12,26 +12,42 @@
   text-decoration: none;
   color: #f05136;
   font-size: 25px;
+  margin-right: 10px;
+}
+.navigate a {
+  padding-right: 15px;
+  border-right: 1.5px solid #f05136;
 }
 
-.nav-bar a:hover {
-  transform: scale(1.1);
+.navigate a:last-child {
+  border-right: none;
+}
+
+.navigate a:hover {
+  color: grey;
+}
+.navigate {
+  width: 40%;
 }
 .nav-bar img {
-  height: 65px;
-  width: 65px;
-  margin-right: 30px;
+  height: 70px;
+  width: 70px;
+  margin-right: 20px;
   border-radius: 35px;
   border: 2px solid #f05136;
 }
 .edit-nav {
-  width: 90%;
+  width: 59%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
 
 #create-profile-pic {
-  font-size: 14px;
+  height: 50px;
+  width: 50px;
   margin-right: 10px;
+}
+#create-profile-pic i {
+  padding: 12px;
 }
