--- a/views/forms/college-create.hbs
+++ b/views/forms/college-create.hbs
@@ -28,7 +28,7 @@
                 {{/each}}
             </select>
 
-            <button type="submit">Create Trip</button>
+            <button type="submit">Create College</button>
         </form>
         <span>To go back to admin dashboard, <a href="/admin">click here</a></span>
     </section>
