--- a/public/css/adminHome.css
+++ b/public/css/adminHome.css
@@ -1,162 +1,160 @@
 .tab {
-    overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
 }
 
 /* Style the buttons that are used to open the tab content */
 .tab button {
-    background-color: inherit;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    transition: 0.3s;
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
 }
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-    background-color: #ddd;
+  background-color: #ddd;
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-    background-color: #ccc;
+  background-color: #ccc;
 }
 
 /* Style the tab content */
 .tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
 }
 
 .tabcontent {
-    animation: fadeEffect 1s;
-    /* Fading effect takes 1 second */
+  animation: fadeEffect 1s;
+  /* Fading effect takes 1 second */
 }
 
 /* Go from zero to full opacity */
 @keyframes fadeEffect {
-    from {
-        opacity: 0;
-    }
+  from {
+    opacity: 0;
+  }
 
-    to {
-        opacity: 1;
-    }
+  to {
+    opacity: 1;
+  }
 }
 
-
 .manage-items-wrapper {
-    padding: 2rem 1.2rem;
-    height: calc(100vh - (84px));
-    flex-direction: column;
-
+  padding: 2rem 1.2rem;
+  height: calc(100vh - (84px));
+  flex-direction: column;
 }
 
 .item-manage-table {
-    border: 1px solid;
-    width: 80%
+  border: 1px solid;
+  width: 80%;
 }
 
 .table-row {
-    display: flex;
+  display: flex;
 }
 
 .table-division {
-    border: 1px solid;
-    padding: 1rem;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    width: 25%;
-    flex-direction: column;
+  border: 1px solid;
+  padding: 1rem;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  width: 140px;
+  flex-direction: column;
 }
 
 .table-head {
-    width: 25%;
-    border: 1px solid;
-    padding: 1rem;
-    text-align: left;
-    font-weight: 600;
+  width: 140px;
+  border: 1px solid;
+  padding: 1rem;
+  text-align: left;
+  font-weight: 600;
 }
 
 .table-icon {
-    color: black;
-    text-decoration: none;
+  color: black;
+  text-decoration: none;
 }
 
 .table-icon:hover {
-    cursor: pointer;
-    color: #F05136
+  cursor: pointer;
+  color: #f05136;
 }
 
 .table-image {
-    width: 30px;
+  width: 30px;
 }
 
 /* The switch - the box around the slider */
 .switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
 }
 
 /* Hide default HTML checkbox */
 .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
+  opacity: 0;
+  width: 0;
+  height: 0;
 }
 
 /* The slider */
 .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
-input:checked+.slider {
-    background-color: #F05136;
+input:checked + .slider {
+  background-color: #f05136;
 }
 
-input:focus+.slider {
-    box-shadow: 0 0 1px #F05136;
+input:focus + .slider {
+  box-shadow: 0 0 1px #f05136;
 }
 
-input:checked+.slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
 }
 
 /* Rounded sliders */
 .slider.round {
-    border-radius: 34px;
+  border-radius: 34px;
 }
 
 .slider.round:before {
-    border-radius: 50%;
+  border-radius: 50%;
 }
